--- a/package.json
+++ b/package.json
@@ -25,21 +25,19 @@
 	},
 	"homepage": "https://github.com/tahnik/react-express-webpack-babel#readme",
 	"dependencies": {
-		"babel-core": "^6.10.4",
-		"babel-loader": "^6.2.4",
-		"babel-preset-es2015": "^6.9.0",
-		"babel-preset-react": "^6.11.1",
-		"babel-preset-stage-1": "^6.5.0",
 		"express": "^4.14.0",
 		"react": "^15.2.1",
-		"react-dom": "^15.2.1",
-		"webpack": "^2.2.1"
+		"react-dom": "^15.2.1"
 	},
 	"devDependencies": {
-		"babel-register": "^6.24.1",
+		"babel-core": "^6.24.0",
+		"babel-loader": "^6.4.1",
+		"babel-preset-es2015": "^6.24.0",
+		"babel-preset-react": "^6.23.0",
 		"css-loader": "^0.28.1",
 		"extract-text-webpack-plugin": "^2.1.0",
 		"style-loader": "^0.17.0",
+		"webpack": "^2.3.2",
 		"webpack-node-externals": "^1.2.0"
 	}
 }
