--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Boilerplate for ReactJS project with ExpressJS server. It uses webpack and babel",
 	"main": "server.bundle.js",
 	"scripts": {
-		"start": "node server.bundle.js",
+		"start": "node dist/server.bundle.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
