--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "generator-react-express-webpack-babel",
-	"version": "3.2.0",
-	"description": "Boilerplate for ReactJS project with ExpressJS server. It uses webpack and babel",
+	"name": "arc-react-webpack-demo",
+	"version": "1.0",
+	"description": "ARC Demo using React and Webpack, with both server and client rendering",
 	"main": "server.bundle.js",
 	"scripts": {
 		"start": "node STATIC/server.bundle.js",
@@ -9,27 +9,24 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/tahnik/react-express-webpack-babel"
+		"url": "https://github.corp.ebay.com/conchang/react-express-webpack-babel"
 	},
 	"keywords": [
+		"ARC",
+		"adaptive",
 		"react",
 		"express",
 		"webpack",
-		"babel",
-		"yeoman-generator"
+		"babel"
 	],
-	"author": "Tahnik Mustasin",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/tahnik/react-express-webpack-babel/issues"
-	},
-	"homepage": "https://github.com/tahnik/react-express-webpack-babel#readme",
+	"author": "conchang",
+	"license": "MIT",
 	"dependencies": {
-		"express": "^4.14.0",
 		"react": "^15.2.1",
 		"react-dom": "^15.2.1"
 	},
 	"devDependencies": {
+		"express": "^4.14.0",
 		"babel-core": "^6.24.0",
 		"babel-loader": "^6.4.1",
 		"babel-preset-es2015": "^6.24.0",
