--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
 		"ARC",
 		"adaptive",
 		"react",
-		"express",
 		"webpack",
-		"babel"
+		"express"
 	],
 	"author": "conchang",
 	"license": "MIT",
 	"dependencies": {
+		"mobile-detect": "^1.3.6",
 		"react": "^15.2.1",
 		"react-dom": "^15.2.1"
 	},
 	"devDependencies": {
-		"express": "^4.14.0",
 		"babel-core": "^6.24.0",
 		"babel-loader": "^6.4.1",
 		"babel-preset-es2015": "^6.24.0",
 		"babel-preset-react": "^6.23.0",
 		"css-loader": "^0.28.1",
+		"express": "^4.14.0",
 		"extract-text-webpack-plugin": "^2.1.0",
 		"style-loader": "^0.17.0",
 		"webpack": "^2.3.2",
