move everything to client/server folders

--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
 		"ARC",
 		"adaptive",
 		"react",
-		"express",
 		"webpack",
-		"babel"
+		"express"
 	],
 	"author": "conchang",
 	"license": "MIT",
