--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"css-loader": "^0.28.1",
 		"express": "^4.14.0",
 		"extract-text-webpack-plugin": "^2.1.0",
+		"html-webpack-plugin": "^2.28.0",
 		"style-loader": "^0.17.0",
 		"webpack": "^2.3.2",
 		"webpack-node-externals": "^1.2.0"
