--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"mobile-detect": "^1.3.6",
+		"noop-loader": "^1.0.0",
 		"react": "^15.2.1",
 		"react-dom": "^15.2.1"
 	},
@@ -34,6 +35,8 @@
 		"express": "^4.14.0",
 		"extract-text-webpack-plugin": "^2.1.0",
 		"html-webpack-plugin": "^2.28.0",
+		"node-sass": "^4.5.3",
+		"sass-loader": "^6.0.6",
 		"style-loader": "^0.17.0",
 		"webpack": "^2.6.1",
 		"webpack-node-externals": "^1.2.0"
